stateDiagram-v2
    [*] --> Draft
    Draft --> Draft: "Lưu bản nháp (Save draft)"
    Draft --> Published: "Xuất bản khi đủ trường bắt buộc (Publish when required fields pass)"
    Published --> Published: "Cập nhật nội dung đã xuất bản (Update published content)"
    Published --> Draft: "Gỡ xuất bản nếu policy hoặc implementation hỗ trợ"
    Published --> Archived: "Lưu trữ khi collection có archive state rõ"
    Archived --> [*]

    note right of Draft
      Canonical workflow hiện tại là Payload drafts.
      Không giả định approval nhiều bước nếu repo chưa có.
    end note

    note right of Published
      publishedAt là timestamp public delivery.
      Search sync và revalidation là downstream async (bất đồng bộ).
    end note
